fixes flash messaging and improves search result visibility

--- a/app/javascript/stylesheets/_map.scss
+++ b/app/javascript/stylesheets/_map.scss
@@ -63,3 +63,10 @@
     fill: #27a645;
   }
 }
+
+.alert {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 10px;
+  text-align: center;
+}
